fixed top gap on mobile navbar

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -38,7 +38,7 @@
       position: fixed;
       background: $primary;
       right: -200px;
-      top: 65px;
+      top: 64px;
       z-index: 2;
       flex-direction: column;
       height: 100%;
